add fcitx support module. can input string already.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(
     ${ZINNIA_INCLUDE_DIRS}
     ${X11_XTest_INCLUDE_PATH}
     ${PROJECT_BINARY_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}
 )
 link_directories(
     ${GTK2_LIBRARY_DIRS}
@@ -12,9 +13,22 @@ link_directories(
     ${ZINNIA_LIBRARY_DIRS}
 )
 
+find_program(DBUSBINDINGTOOL dbus-binding-tool)
+
 set(FCITX_HANDWRITE_SRCS
+    service.c
     handwrite.c
     stroke.c
+    handwriting-service.h
+)
+
+add_custom_command(
+    OUTPUT handwriting-service.h
+    COMMAND ${DBUSBINDINGTOOL} --mode=glib-server
+                               --output=handwriting-service.h
+                               --prefix=handwriting_service
+                                ${CMAKE_CURRENT_SOURCE_DIR}/handwriting-service.xml
+    DEPENDS handwriting-service.xml
 )
 
 add_executable(fcitx-handwriting ${FCITX_HANDWRITE_SRCS})
