--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,11 @@ configure_file(
 add_custom_target(uninstall
     COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 
+set(CMAKE_C_FLAGS "-Wall -Wextra -Wno-sign-compare -Wno-unused-parameter -fvisibility=hidden")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wno-sign-compare -Wno-unused-parameter -fvisibility=hidden")
+set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined,--as-needed")
+set(CMAKE_MODULE_LINKER_FLAGS "-Wl,--no-undefined,--as-needed")
+
 add_subdirectory(src)
 add_subdirectory(theme)
 add_subdirectory(im)
